Update and rename 2022-09-17-测试文章1.md to 2022-09-17-1.md

--- a/_posts/2022-09-17-1.md
+++ b/_posts/2022-09-17-1.md
@@ -2,7 +2,7 @@
 layout:     post
 title:      (文章标题)
 subtitle:   (副标题)
-date:       2022年9月17日
+date:       2022-09-17
 author:     (作者名刘闻钦)
 header-img: img/the-first.png
 catalog:   true
